// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tldraw image rule > should expand tldraw images from local files 1`] = `
"<!--+ Warning: Content in HTML comment blocks generated by mdat on ****-**-** +-->

<!-- tldraw { src: "./test/assets/tldraw-sketch.tldr" } -->

<picture>
  <source media="(prefers-color-scheme: dark)" srcset="../../../../../../var/folders/7w/vbgxhpks5pz_9z06ms_4s9f80000gn/T/assets/tldraw-sketch-132cbdb8-dark.svg">
  <source media="(prefers-color-scheme: light)" srcset="../../../../../../var/folders/7w/vbgxhpks5pz_9z06ms_4s9f80000gn/T/assets/tldraw-sketch-132cbdb8-light.svg">
  <img alt="tldraw diagram" src="../../../../../../var/folders/7w/vbgxhpks5pz_9z06ms_4s9f80000gn/T/assets/tldraw-sketch-132cbdb8-light.svg">
</picture>

<!-- /tldraw -->
"
`;

exports[`tldraw image rule > should expand tldraw images from remote URLs 1`] = `
"<!--+ Warning: Content in HTML comment blocks generated by mdat on ****-**-** +-->

<!-- tldraw { src: "https://www.tldraw.com/s/v2_c_JsxJk8dag6QsrqExukis4" } -->

<picture>
  <source media="(prefers-color-scheme: dark)" srcset="../../../../../../var/folders/7w/vbgxhpks5pz_9z06ms_4s9f80000gn/T/assets/v2_c_JsxJk8dag6QsrqExukis4-c1827e44-dark.svg">
  <source media="(prefers-color-scheme: light)" srcset="../../../../../../var/folders/7w/vbgxhpks5pz_9z06ms_4s9f80000gn/T/assets/v2_c_JsxJk8dag6QsrqExukis4-c1827e44-light.svg">
  <img alt="tldraw diagram" src="../../../../../../var/folders/7w/vbgxhpks5pz_9z06ms_4s9f80000gn/T/assets/v2_c_JsxJk8dag6QsrqExukis4-c1827e44-light.svg">
</picture>

<!-- /tldraw -->
"
`;
